--- a/web/src/main/webapp/resources/uc/MapClaims.xhtml
+++ b/web/src/main/webapp/resources/uc/MapClaims.xhtml
@@ -152,6 +152,7 @@
                     mapHeight: #{cc.attrs.mapHeight},
                     maxExtentBounds: maxExtentBounds,
                     initialZoomBounds: initialZoomBounds,
+                    isOffline: #{mapSettingsBean.isOffline},
                     applicationUrl: "#{mapSettingsBean.applicationUrl}",
                     languageCode: "#{languageBean.locale}",
                     layers: layers,
