Reports generation updated to allow using JasperServer v6.3

--- a/web/src/main/webapp/report/ViewReport.xhtml
+++ b/web/src/main/webapp/report/ViewReport.xhtml
@@ -44,11 +44,12 @@
                                 <br />
                                 <h:inputText value="#{p.valueString}"  
                                              rendered="#{p.type == 'singleValueText' or
+                                                         p.type == 'text' or
                                                          p.type == 'singleValueTime'}"
                                              class="form-control" title="#{p.description}"
                                              autocomplete="off" />
                                 <h:inputText value="#{p.valueString}"  
-                                             rendered="#{p.type == 'singleValueNumber'}"
+                                             rendered="#{p.type == 'singleValueNumber' or p.type == 'number'}"
                                              class="form-control"  title="#{p.description}"
                                              autocomplete="off" >
                                     <f:convertNumber maxFractionDigits="4" />
