Updates to Myanmar language

--- a/web/src/main/webapp/content/welcome_my_MM.xhtml
+++ b/web/src/main/webapp/content/welcome_my_MM.xhtml
@@ -6,15 +6,13 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <body>
         <ui:composition>
-            <h1>SOLA လူထုအခြေပြု ဆာဗာမှ ကြိုဆိုပါ၏။</h1>
+            <h1>SOLA ရပ်ရွာအခြေပြု ဆာဗာမှ ကြိုဆိုပါသည်</h1>
             <p>
-                SOLA လူထုအခြေပြု ဆာဗာကို အသုံးပြု၍ ရပ်ရွာအခြေပြု အသုံးပြုသူ အဖွဲ့ဝင် တစ်ယောက်အဖြစ် မှတ်ပုံတင်နိုင်ပြီး အဖွဲ့ဝင်များမှ ပြုလုပ်ထားသော မြေယာဆိုင်ရာ အဆိုပြုမှုများကို 
-				ဝင်ရောက် ကြည့်ရှုနိုင်ပါသည်။ အဖွဲ့ဝင်ဖြစ်ရန် ယခုလင့် <h:link outcome="user/registration">မှတ်ပုံတင်ခြင်း</h:link> စာမျက်နှာကို နှိပ်ပါ။ အသုံးပြုသူ မှတ်ပုံတင်ခြင်းကို အင်တာနက်လိုင်းပေါ်မှ တဆင့် ပြုလုပ်ရပါမည်။ 
-				အဖွဲ့ဝင်အဖြစ် မှတ်ပုံတင်လာခြင်းကို SOLA နည်းပညာကျွမ်းကျင်သူက သုံးသပ်ကြည့်ရှုပြီး အတည်ပြုပေးသည်။ အတည်ပြုချက် အနေဖြင့် လျှို့ဝှက်သင်္ကေတ တခုကို အဖွဲ့ဝင် အဖြစ် မှတ်ပုံတင်လာသူ၏ Email လိပ်စာသို့ ပို့ပေးပါလိမ့်မည်။ လက်ခံရရှိသော Link ကို နှိပ်ပြီး အတည်ပြုပေးမှသာ အဖွဲ့ဝင်အဖြစ် အသက်စဝင် အလုပ်လုပ် &#40;Activate&#41; စေသည်။ အခြား နည်းလမ်းတစ်ခုမှာ SOLA နည်းပညာကျွမ်းကျင်သူအား ဆက်သွယ်ပြီး မှတ်ပုံတင်၍ ကိုင်ပိုင် အကောင့်တစ်ခုကို ရယူခြင်းဖြစ်သည်။
+                SOLA ရပ်ရွာအခြေပြု ဆာဗာတွင်  အဖွဲ့ဝင် တစ်ယောက်အဖြစ် မှတ်ပုံတင်ပြီး၊ ရပ်ရွာ အဖွဲ့ဝင်များ ထည့်သွင်းထားသော မြေယာ အဆိုပြုမှုများကို ဝင်ရောက် ကြည့်ရှုနိုင်ပါသည်။ အဖွဲ့ဝင်ဖြစ်ရန် ယခုလင့် <h:link outcome="user/registration">မှတ်ပုံတင်ခြင်း</h:link> စာမျက်နှာကို နှိပ်ပါ။ အသုံးပြုသူ မှတ်ပုံတင်ခြင်းကို အင်တာနက်လိုင်းပေါ်မှ တဆင့် ပြုလုပ်ရပြီး၊ အဖွဲ့ဝင်အဖြစ် လက်ခံအတည်ပြုခြင်းကို SOLA ဆာဗာ ထိန်းချုပ်သူ နည်းပညာရှင်က စစ်ဆေး ခွင့်ပြုပေးရသည်။ အဖွဲ့ဝင် အဖြစ် လက်ခံလျှင် အတည်ပြု စကားဝှက် ပါသော စာကို မှတ်ပုံတင်လာသူ၏ အီးမေးလ်လိပ်စာသို့ ပို့ပေးသည်။ ယင်းစာတွင် ပေးထားသော လင့်ကို ဖွင့်ပြီး၊ အတည်ပြု စကားဝှက် ထည့်သွင်းမှသာ အဖွဲ့ဝင်အဖြစ် အသက်စဝင်သည်။ မှတ်ပုံတင်နည်း နောက်တနည်းမှာ သက်ဆိုင်ရာ SOLA ဆာဗာ၏ နည်းပညာရှင်ကို ဆက်သွယ်ပြီး မှတ်ပုံတင်စေပြီး ကိုင်ပိုင် အကောင့်တစ်ခု ရယူခြင်းဖြစ်သည်။
                 <p></p>
-                အသုံးပြုသူ အဖွဲ့ဝင်အားလုံး၏ မှတ်ပုံတင်ခြင်းကို လူထုအခြေပြု ညှိုနှိုင်းရေးကော်မတီနှင့် SOLA နည်းပညာကျွမ်းကျင်သူများက သုံးသပ် ခွင့်ပြုပေးရသည်။
+                အသုံးပြုသူ အဖွဲ့ဝင်အားလုံး၏ မှတ်ပုံတင်ခြင်းကို ရပ်ရွာညှိုနှိုင်းရေးကော်မတီဝင်များနှင့် SOLA နည်းပညာရှင်များက စိစစ်သုံးသပ်ပြီး၊ အတည်ပြုပေးရသည်။
                 <p></p>
-				အဖွဲ့ဝင်အဖြစ် သတ်မှတ်ထားပြီး ခံရသူ ဖြစ်လျှင် စနစ်ထဲသို့ <h:link outcome="login">ဝင်ရောက်ရန် &#40;Login&#41; စာမျက်နှာ</h:link> ကို အသုံးပြုရသည်။
+				အဖွဲ့ဝင် ဖြစ်လျှင် စနစ်ထဲသို့ <h:link outcome="login">ဝင်ရောက်ရန် &#40;Login&#41; စာမျက်နှာ</h:link> မှ ဝင်ရောက်ပါ။
             </p>
         </ui:composition>
     </body>
