--- a/web/src/main/webapp/controls/Claimant.xhtml
+++ b/web/src/main/webapp/controls/Claimant.xhtml
@@ -243,28 +243,6 @@
 
             <h:panelGroup rendered="#{claimPageBean.canEdit and allowEdit}">
                 <script language="javascript">
-                    function checkPartyForm() {
-                        var nameError = '- #{err.CLAIM_CLAIMANT_NAME_REQUIRED}';
-                        var genderError = '- #{err.CLAIM_CLAIMANT_GENDER_REQUIERD}';
-                        var errors = "";
-
-                        if ($("#mainForm\\:txtPartyName").val() === '') {
-                            errors = nameError + "\r\n";
-                        }
-                        
-                        if (document.getElementById("mainForm:cbxGender") !== null) {
-                            if($("#mainForm\\:cbxGender").val() === ''){
-                                errors += genderError;
-                            }
-                        }
-
-                        if (errors !== '') {
-                            alert(errors);
-                            return false;
-                        }
-                        return true;
-                    }
-
                     function onEditClaimant(data) {
                         handleAjax(data);
                         var status = data.status;
@@ -300,152 +278,8 @@
                         }
                     }
                 </script>
-
-                <div id="pnlPartyWrapper" class="HiddenItem">
-                    <h:panelGroup id="pnlParty" layout="block">
-                        <div class="row">
-                            <div class="#{claimPageBean.party.person ? 'col-md-4' : 'col-md-8'}">
-                                <label>
-                                    #{msg.CLAIM_PAGE_CLAIMANT_NAME} <i class="glyphicon glyphicon-required"></i>
-                                </label>
-                                <h:inputText id="txtPartyName" 
-                                             value="#{claimPageBean.party.name}"  
-                                             class="form-control"
-                                             maxlength="250"
-                                             autocomplete="off" />
-                            </div>
-                            <h:panelGroup class="col-md-4" layout="block" rendered="#{claimPageBean.party.person}">
-                                <h:outputLabel rendered="#{claimPageBean.party.person}">
-                                    #{msg.CLAIM_PAGE_CLAIMANT_LAST_NAME}
-                                </h:outputLabel>
-                                <h:inputText id="txtPartyLastName" 
-                                             value="#{claimPageBean.party.lastName}"  
-                                             rendered="#{claimPageBean.party.person}"
-                                             class="form-control"
-                                             maxlength="250"
-                                             autocomplete="off" />
-                            </h:panelGroup>
-                            <div class="col-md-4">
-                                <h:outputLabel rendered="#{claimPageBean.party.person}">
-                                    #{msg.CLAIM_PAGE_CLAIMANT_BIRTHDAY}
-                                </h:outputLabel>
-                                <h:outputLabel rendered="#{not claimPageBean.party.person}">
-                                    #{msg.CLAIM_PAGE_ESTABLISHMENT_DATE}
-                                </h:outputLabel>
-
-                                <div class="input-group">
-                                    <span class="input-group-addon">
-                                        <i class="glyphicon glyphicon-calendar"></i>
-                                    </span>
-                                    <h:inputText id="txtPartyBirthDate" 
-                                                 value="#{claimPageBean.partyBirthday}"  
-                                                 class="form-control DateField"
-                                                 maxlength="10"
-                                                 autocomplete="off" />
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="splitter"></div>
-
-                        <div class="row">
-                            <h:panelGroup class="col-md-4" layout="block" rendered="#{claimPageBean.party.person}">
-                                <label>
-                                    #{msg.CLAIM_PAGE_CLAIMANT_ID_TYPE}
-                                </label>
-                                <h:selectOneListbox
-                                    id="cbxIdTypes" 
-                                    size="1"
-                                    value="#{claimPageBean.party.idTypeCode}"
-                                    class="form-control">
-                                    <f:selectItems value="#{claimPageBean.idTypes}" var="t"
-                                                   itemLabel="#{t.displayValue}" 
-                                                   itemValue="#{t.code}" />
-                                </h:selectOneListbox>
-                            </h:panelGroup>
-                            <div class="#{claimPageBean.party.person ? 'col-md-4' : 'col-md-8'}">
-                                <h:outputLabel id="lblClaimantIdNumber" rendered="#{claimPageBean.party.person}">
-                                    #{msg.CLAIM_PAGE_CLAIMANT_ID_NUMBER}
-                                </h:outputLabel>
-                                <h:outputLabel id="lblClaimantRegNumber" rendered="#{not claimPageBean.party.person}">
-                                    #{msg.CLAIM_PAGE_REGISTRATION_NUMBER}
-                                </h:outputLabel>
-                                <h:inputText id="txtPartyIdNumber" 
-                                             value="#{claimPageBean.party.idNumber}"  
-                                             class="form-control"
-                                             maxlength="20"
-                                             autocomplete="off" />
-                            </div>
-                            <div class="col-md-4">
-                                <h:outputLabel id="lblClaimantGender" rendered="#{claimPageBean.party.person}">
-                                    #{msg.CLAIM_PAGE_CLAIMANT_GENDER} <i class="glyphicon glyphicon-required"></i>
-                                </h:outputLabel>
-                                <h:selectOneListbox
-                                    id="cbxGender" 
-                                    size="1"
-                                    value="#{claimPageBean.party.genderCode}"
-                                    rendered="#{claimPageBean.party.person}"
-                                    class="form-control">
-                                    <f:selectItems value="#{claimPageBean.genderTypes}" var="t"
-                                                   itemLabel="#{t.displayValue}" 
-                                                   itemValue="#{t.code}" />
-                                </h:selectOneListbox>
-                            </div>
-                        </div>
-
-                        <div class="splitter"></div>
-
-                        <div class="row">
-                            <div class="col-md-4">
-                                <label>
-                                    #{msg.CLAIM_PAGE_CLAIMANT_PHONE_NUMBER}
-                                </label>
-                                <h:inputText id="txtPartyPhone" 
-                                             value="#{claimPageBean.party.phone}"  
-                                             class="form-control"
-                                             maxlength="20"
-                                             autocomplete="off" />
-                            </div>
-                            <div class="col-md-4">
-                                <label>
-                                    #{msg.CLAIM_PAGE_CLAIMANT_MOBILE_PHONE_NUMBER}
-                                </label>
-                                <h:inputText id="txtPartyMobilePhone" 
-                                             value="#{claimPageBean.party.mobilePhone}"  
-                                             class="form-control"
-                                             maxlength="20"
-                                             autocomplete="off" />
-                            </div>
-                            <div class="col-md-4">
-                                <label>
-                                    #{msg.CLAIM_PAGE_CLAIMANT_EMAIL}
-                                </label>
-                                <h:inputText id="txtPartyEmail" 
-                                             value="#{claimPageBean.party.email}"  
-                                             class="form-control"
-                                             maxlength="30"
-                                             autocomplete="off" />
-                            </div>
-                        </div>
-
-                        <div class="splitter"></div>
-
-                        <div class="row">
-                            <div class="col-md-12">
-                                <label>
-                                    #{msg.CLAIM_PAGE_CLAIMANT_ADDRESS}
-                                </label>
-                                <h:inputText id="txtPartyAddress" 
-                                             value="#{claimPageBean.party.address}"  
-                                             class="form-control"
-                                             maxlength="255"
-                                             autocomplete="off" />
-                            </div>
-                        </div>
-                        <h:inputHidden id="hPartyId" />
-                    </h:panelGroup>
-                </div>
-
+                <ui:include src="/controls/Party.xhtml"></ui:include>
+     
                 <div style="display: none;" class="modal fade" id="claimantDialog" tabindex="-1" role="dialog" aria-hidden="true">
                     <div class="modal-dialog" style="width:700px;">
                         <div class="modal-content">
