Map search implemented.

--- a/web/src/main/webapp/resources/uc/Map.xhtml
+++ b/web/src/main/webapp/resources/uc/Map.xhtml
@@ -37,12 +37,13 @@
             MSG.MAP_CONTROL_AREA = "#{msg.MAP_CONTROL_AREA}";
             MSG.MAP_CONTROL_GOOGLE_MAP = "#{msg.MAP_CONTROL_GOOGLE_MAP}";
             MSG.MAP_CONTROL_GOOGLE_EARTH = "#{msg.MAP_CONTROL_GOOGLE_EARTH}";
+            MSG.MAP_CONTROL_SEARCH = "#{msg.GENERAL_LABEL_SEARCH}";
             
             sourceCrs = "EPSG:4326";
             destCrs = "EPSG:3857";
         </script>
 
-        <div id="mapCtrlWrapper">
+        <div id="mapCtrlWrapper" style="position: relative;">
             <div id="mapCtrl"></div>
         </div>
         
