--- a/web/src/main/webapp/resources/uc/MapClaims.xhtml
+++ b/web/src/main/webapp/resources/uc/MapClaims.xhtml
@@ -155,6 +155,7 @@
                     isOffline: #{mapSettingsBean.isOffline},
                     applicationUrl: "#{mapSettingsBean.applicationUrl}",
                     languageCode: "#{languageBean.locale}",
+                    showSearch: true,
                     layers: layers
                 });
                 
