New features introduced - boundary management, map search, boundary printing, public display printing

--- a/web/src/main/webapp/claim/ClaimPrint.xhtml
+++ b/web/src/main/webapp/claim/ClaimPrint.xhtml
@@ -135,7 +135,11 @@
                         </c:if>
 
                         map.addLayers(layers);
-                        map.zoomToExtent(initialZoomBounds);
+                        //map.zoomToExtent(initialZoomBounds);
+
+                        setTimeout(function() {
+                            map.zoomToExtent(initialZoomBounds);
+                        }, 500);
 
                         setTimeout(function() {
                             print();
