--- a/web/src/main/webapp/resources/uc/Map.xhtml
+++ b/web/src/main/webapp/resources/uc/Map.xhtml
@@ -17,11 +17,11 @@
             MSG.MAP_CONTROL_ZOOM_OUT = "#{msg.MAP_CONTROL_ZOOM_OUT}";
             MSG.MAP_CONTROL_PAN = "#{msg.MAP_CONTROL_PAN}";
             MSG.MAP_CONTROL_LOADING = "#{msg.MAP_CONTROL_LOADING}";
-            MSG.MAP_CONTROL_CLAIM_NOT_FOUND = "#{msg.MAP_CONTROL_CLAIM_NOT_FOUND}";
+            MSG.MAP_CONTROL_NOTHING_FOUND = "#{msg.MAP_CONTROL_NOTHING_FOUND}";
             MSG.MAP_CONTROL_CLAIMANT = "#{msg.MAP_CONTROL_CLAIMANT}";
             MSG.MAP_CONTROL_STATUS = "#{msg.MAP_CONTROL_STATUS}";
             MSG.MAP_CONTROL_LODGED = "#{msg.MAP_CONTROL_LODGED}";
-            MSG.MAP_CONTROL_CLAIM_INFO = "#{msg.MAP_CONTROL_CLAIM_INFO}";
+            MSG.MAP_CONTROL_INFO = "#{msg.MAP_CONTROL_INFO}";
             MSG.MAP_CONTROL_EDIT_MAP = "#{msg.MAP_CONTROL_EDIT_MAP}";
             MSG.MAP_CONTROL_DRAW_POLYGON = "#{msg.MAP_CONTROL_DRAW_POLYGON}";
             MSG.MAP_CONTROL_DRAW_LINE = "#{msg.MAP_CONTROL_DRAW_LINE}";
@@ -38,6 +38,8 @@
             MSG.MAP_CONTROL_GOOGLE_MAP = "#{msg.MAP_CONTROL_GOOGLE_MAP}";
             MSG.MAP_CONTROL_GOOGLE_EARTH = "#{msg.MAP_CONTROL_GOOGLE_EARTH}";
             MSG.MAP_CONTROL_SEARCH = "#{msg.GENERAL_LABEL_SEARCH}";
+            MSG.MAP_CONTROL_TYPE = "#{msg.MAP_CONTROL_TYPE}";
+            MSG.MAP_CONTROL_PARENT = "#{msg.MAP_CONTROL_PARENT}";
             
             sourceCrs = "EPSG:4326";
             destCrs = "EPSG:3857";
