--- a/web/src/main/webapp/controls/MainMenu.xhtml
+++ b/web/src/main/webapp/controls/MainMenu.xhtml
@@ -18,18 +18,20 @@
                                 </a>
                             </li>
                         </c:if>
-                        <li class='#{mainMenuBean.getItemClassByPath("/user/")}'>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                #{msg.MAIN_MENU_REGISTRATION} <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#{request.contextPath}/user/registration.xhtml">
-                                        <i class="glyphicon glyphicon-user"></i> #{msg.MAIN_MENU_NEW_REGISTRATION}
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
+                        <c:if test="#{not activeUserBean.authenticated}">
+                            <li class='#{mainMenuBean.getItemClassByPath("/user/")}'>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    #{msg.MAIN_MENU_REGISTRATION} <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#{request.contextPath}/user/registration.xhtml">
+                                            <i class="glyphicon glyphicon-user"></i> #{msg.MAIN_MENU_NEW_REGISTRATION}
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </c:if>
                         <c:if test="#{activeUserBean.authenticated}">
                             <li class='#{mainMenuBean.getItemClassByPath("/claim/")}'>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -43,6 +45,22 @@
                                     <c:if test="#{activeUserBean.canRecordClaim}">
                                         <li><a href="#{request.contextPath}/claim/Claim.xhtml"><i class="glyphicon glyphicon-file"></i> #{msg.MAIN_MENU_NEW}</a></li>
                                         <li><a href="#{request.contextPath}/claim/ClaimUpload.xhtml"><i class="glyphicon glyphicon-upload"></i> #{msg.MAIN_MENU_UPLOAD}</a></li>                               
+                                    </c:if>
+                                    <c:if test="#{activeUserBean.canViewReports}">
+                                        <li><a href="#" onclick="return openPublicDisplayMap();"><i class="glyphicon glyphicon-bullhorn"></i> #{msg.MAIN_MENU_PUBLIC_DISPLAY_MAP}</a></li>
+                                        <li><a href="#" onclick="return openPublicDisplayOwners();"><i class="glyphicon glyphicon-bullhorn"></i> #{msg.MAIN_MENU_PUBLIC_DISPLAY_OWNERS}</a></li>
+                                    </c:if>
+                                </ul>
+                            </li>
+
+                            <li class='#{mainMenuBean.getItemClassByPath("/boundary/")}'>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    #{msg.MAIN_MENU_BOUNDARIES} <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <c:if test="#{activeUserBean.canModerateClaim}">
+                                        <li><a href="#{request.contextPath}/boundary/Boundaries.xhtml"><i class="glyphicon glyphicon-th-list"></i> #{msg.MAIN_MENU_LIST}</a></li>                               
+                                        <li><a href="#{request.contextPath}/boundary/Boundary.xhtml"><i class="glyphicon glyphicon-file"></i> #{msg.MAIN_MENU_NEW}</a></li>
                                     </c:if>
                                 </ul>
                             </li>
@@ -71,6 +89,16 @@
                     </ul>
                 </div>
             </nav>
+            <script language="javascript">
+                function openPublicDisplayMap() {
+                    var wnd = window.open("#{request.contextPath}/claim/PublicDisplayMapPrint.xhtml", "_blank", "width=1000,height=600,menubar=yes,location=yes,resizable=yes,scrollbars=yes,status=yes,fullscreen=yes");
+                    return false;
+                }
+                function openPublicDisplayOwners() {
+                    var wnd = window.open("#{request.contextPath}/claim/PublicDisplayOwnersPrint.xhtml", "_blank", "width=1000,height=600,menubar=yes,location=yes,resizable=yes,scrollbars=yes,status=yes,fullscreen=yes");
+                    return false;
+                }
+            </script>
         </ui:composition>
     </body>
 </html>
