Boundary recorder field added

--- a/web/src/main/webapp/boundary/ViewBoundary.xhtml
+++ b/web/src/main/webapp/boundary/ViewBoundary.xhtml
@@ -96,12 +96,20 @@
                                         #{boundaryPageBean.fullParentNames}
                                     </div>
 
-                                    <div class="col-md-8">
+                                    <div class="col-md-4">
                                         <label>
                                             #{msg.BOUNDARIES_PAGE_AUTHORITY}
                                         </label>
                                         <br />
                                         #{boundaryPageBean.boundary.authorityName}
+                                    </div>
+                                    
+                                    <div class="col-md-4">
+                                        <label>
+                                            #{msg.CLAIM_PAGE_RECORDER}
+                                        </label>
+                                        <br />
+                                        #{boundaryPageBean.recorderName}
                                     </div>
                                 </div>
                             </div>
