Further refinements to Samoa CS Localization

--- a/web/src/main/webapp/content/welcome_sm_WS.xhtml
+++ b/web/src/main/webapp/content/welcome_sm_WS.xhtml
@@ -8,7 +8,7 @@
         <ui:composition>
             <h1>Welcome to SOLA Community Server</h1>
             <p>
-                Using SOLA Community server you can <h:link outcome="user/registration">register</h:link> as a
+                Using SOLA Community server you can <h:link outcome="user/registration">enrol</h:link> as a
                 Community Member and view recordings made by community members.
                 User enrolment can be done online and once you complete enrolment the Community Technologist
                 will review it and approve. Upon approval a confirmation code will be sent to your e-mail address.
@@ -16,7 +16,7 @@
                 Another way is to contact your Community Technologist and they will enroll
                 you as a Community Server user.
                 <p></p>
-                All Community Member enrolmentss are subject to review and approval by the Community Server Technologist
+                All Community Member enrolments are subject to review and approval by the Community Server Technologist
                 and the SMSMCL project team.
                 <p></p>
                 If you are already enrolled, use <h:link outcome="login">Login page</h:link> to login into the system.
