--- a/web/src/main/webapp/claim/search.xhtml
+++ b/web/src/main/webapp/claim/search.xhtml
@@ -10,6 +10,10 @@
             <ui:define name="title">
                 #{msg.CLAIM_SEARCH_PAGE_TITLE}
             </ui:define>
+            <ui:define name="head">
+                <link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/datatables.min.css" />
+                <script type="text/javascript" src="#{request.contextPath}/js/datatables.min.js"></script>
+            </ui:define>
             <ui:define name="content">
                 <script type="text/javascript">
                     $(function() {
