--- a/web/src/main/webapp/resources/uc/ClaimsTable.xhtml
+++ b/web/src/main/webapp/resources/uc/ClaimsTable.xhtml
@@ -2,7 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:cc="http://java.sun.com/jsf/composite"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:fn="http://java.sun.com/jsp/jstl/functions"
       xmlns:f="http://java.sun.com/jsf/core">
 
     <cc:interface>
@@ -10,33 +13,49 @@
     </cc:interface>
 
     <cc:implementation>
-        <h:dataTable value="#{cc.attrs.claims}" var="s" 
-                     class="table"
-                     headerClass="table-header">
-            <h:column>
-                <f:facet name="header">#{msg.CLAIM_SEARCH_NUMBER}</f:facet>
-                <a href="#{request.contextPath}/claim/ViewClaim.xhtml?id=#{s.id}">#{s.nr}</a>
-            </h:column>
-            <h:column>
-                <f:facet name="header">#{msg.CLAIM_SEARCH_DESCRIPTION}</f:facet>
-                    #{s.description}
-            </h:column>
-            <h:column>
-                <f:facet name="header">#{msg.CLAIM_SEARCH_LODGING_DATE}</f:facet>
-                    #{dateBean.formatDate(s.lodgementDate)}
-            </h:column>
-            <h:column>
-                <f:facet name="header">#{msg.CLAIM_SEARCH_CLAIMANT_NAME}</f:facet>
-                    #{s.claimantName}
-            </h:column>
-            <h:column>
-                <f:facet name="header">#{msg.CLAIM_SEARCH_CHALLENGE_EXPIRATION}</f:facet>
-                    #{dateBean.formatDate(s.challengeExpiryDate)}
-            </h:column>
-            <h:column>
-                <f:facet name="header">#{msg.GENERAL_LABEL_STATUS}</f:facet>
-                    #{s.statusName}
-            </h:column>
-        </h:dataTable>
+        <script type="text/javascript">
+            $(document).ready(function () {
+                var table_#{cc.id} = $('#claimsTableWrapper_#{cc.id} table').DataTable({
+                    "paging": false,
+                    "info": false,
+                    "sort": true,
+                    "searching": false,
+                    "fixedHeader": true,
+                    "order": [[0, 'desc']]
+                });
+            });
+
+
+        </script>
+
+        <div id="claimsTableWrapper_#{cc.id}">
+            <h:dataTable value="#{cc.attrs.claims}" var="s"
+                         class="table table-striped table-hover table-header">
+                <h:column>
+                    <f:facet name="header">#{msg.CLAIM_SEARCH_NUMBER}</f:facet>
+                    <a href="#{request.contextPath}/claim/ViewClaim.xhtml?id=#{s.id}">#{s.nr}</a>
+                </h:column>
+                <h:column>
+                    <f:facet name="header">#{msg.CLAIM_SEARCH_DESCRIPTION}</f:facet>
+                        #{s.description}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">#{msg.CLAIM_SEARCH_LODGING_DATE}</f:facet>
+                        #{dateBean.formatDate(s.lodgementDate)}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">#{msg.CLAIM_SEARCH_CLAIMANT_NAME}</f:facet>
+                        #{s.claimantName}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">#{msg.CLAIM_SEARCH_CHALLENGE_EXPIRATION}</f:facet>
+                        #{dateBean.formatDate(s.challengeExpiryDate)}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">#{msg.GENERAL_LABEL_STATUS}</f:facet>
+                        #{s.statusName}
+                </h:column>
+            </h:dataTable>
+        </div>
     </cc:implementation>
 </html>
