--- a/web/src/main/webapp/resources/uc/MapClaims.xhtml
+++ b/web/src/main/webapp/resources/uc/MapClaims.xhtml
@@ -47,7 +47,7 @@
                         // Add WMS layers
                         var wmsLayer = new OpenLayers.Layer.WMS("#{l.title}", "#{l.url}",
                                     {layers: '#{l.wmsLayers}' #{mapSettingsBean.getLayerParamsString(l, true)}},
-                                    {minResolution: 0.001, maxResolution: 200, #{mapSettingsBean.getLayerOptionsString(l, false)}});
+                                    {#{mapSettingsBean.getLayerOptionsString(l, false)}});
                         wmsLayer.legendOptions = "#{mapSettingsBean.getLegendOptions(l)}";
                         layers.push(wmsLayer);
                     </ui:fragment>
