--- a/web/src/main/webapp/controls/ClaimComments.xhtml
+++ b/web/src/main/webapp/controls/ClaimComments.xhtml
@@ -13,8 +13,7 @@
             <h:panelGroup id="pnlComments">
                 <h:dataTable value="#{claimPageBean.comments}" var="c"
                              id="tableComments"
-                             class="table"
-                             headerClass="table-header">
+                             class="table table-striped table-hover table-header">
                     <h:column>
                         <f:facet name="header">#{msg.CLAIM_PAGE_COMMENT}</f:facet>
                         <div style="width: 450px;">
