--- a/web/src/main/webapp/resources/uc/MapClaims.xhtml
+++ b/web/src/main/webapp/resources/uc/MapClaims.xhtml
@@ -153,7 +153,7 @@
                     maxExtentBounds: maxExtentBounds,
                     initialZoomBounds: initialZoomBounds,
                     isOffline: #{mapSettingsBean.isOffline},
-                    applicationUrl: "#{mapSettingsBean.applicationUrl}",
+                    applicationUrl: fixAppProto("#{mapSettingsBean.applicationUrl}"),
                     languageCode: "#{languageBean.locale}",
                     showSearch: true,
                     layers: layers
