Improvements to the map component to better render google layers.

--- a/web/src/main/webapp/resources/uc/Map.xhtml
+++ b/web/src/main/webapp/resources/uc/Map.xhtml
@@ -46,6 +46,7 @@
         </script>
 
         <div id="mapCtrlWrapper" style="position: relative;">
+            <div id="loadDiv"></div>
             <div id="mapCtrl"></div>
         </div>
         
