Introducing Import Polygon feature on the CS map control.

--- a/web/src/main/webapp/resources/uc/Map.xhtml
+++ b/web/src/main/webapp/resources/uc/Map.xhtml
@@ -24,6 +24,7 @@
             MSG.MAP_CONTROL_INFO = "#{msg.MAP_CONTROL_INFO}";
             MSG.MAP_CONTROL_EDIT_MAP = "#{msg.MAP_CONTROL_EDIT_MAP}";
             MSG.MAP_CONTROL_DRAW_POLYGON = "#{msg.MAP_CONTROL_DRAW_POLYGON}";
+            MSG.MAP_CONTROL_IMPORT_POINTS = "#{msg.MAP_CONTROL_IMPORT_POINTS}";
             MSG.MAP_CONTROL_DRAW_LINE = "#{msg.MAP_CONTROL_DRAW_LINE}";
             MSG.MAP_CONTROL_DRAW_POINT = "#{msg.MAP_CONTROL_DRAW_POINT}";
             MSG.MAP_CONTROL_EDIT_SHAPE = "#{msg.MAP_CONTROL_EDIT_SHAPE}";
@@ -40,6 +41,16 @@
             MSG.MAP_CONTROL_SEARCH = "#{msg.GENERAL_LABEL_SEARCH}";
             MSG.MAP_CONTROL_TYPE = "#{msg.MAP_CONTROL_TYPE}";
             MSG.MAP_CONTROL_PARENT = "#{msg.MAP_CONTROL_PARENT}";
+            MSG.MAP_CONTROL_CLOSE = "#{msg.GENERAL_LABEL_CLOSE}";
+            MSG.MAP_CONTROL_IMPORT = "#{msg.MAP_CONTROL_IMPORT}";
+            MSG.MAP_CONTROL_POINTS_TYPE = "#{msg.MAP_CONTROL_POINTS_TYPE}";
+            MSG.MAP_CONTROL_POINTS = "#{msg.MAP_CONTROL_POINTS}";
+            MSG.MAP_CONTROL_CRS = "#{msg.MAP_CONTROL_CRS}";
+            MSG.MAP_CONTROL_WKT = "#{msg.MAP_CONTROL_WKT}";
+            MSG.MAP_CONTROL_COMMA_SEPARATED = "#{msg.MAP_CONTROL_COMMA_SEPARATED}";
+            MSG.MAP_CONTROL_SEMICOLON = "#{msg.MAP_CONTROL_SEMICOLON}";
+            MSG.MAP_CONTROL_PARCEL_NOT_POLYGON = "#{err.MAP_CONTROL_PARCEL_NOT_POLYGON}";
+            MSG.MAP_CONTROL_PARCEL_3POINT_MIN = "#{err.MAP_CONTROL_PARCEL_3POINT_MIN}";
             
             sourceCrs = "EPSG:4326";
             destCrs = "EPSG:3857";
